--- a/docs/latex/annotated.tex
+++ b/docs/latex/annotated.tex
@@ -10,7 +10,7 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\mbox{\hyperlink{class_koszyk}{Koszyk}} \\*Klasa reprezentująca produkt }{\pageref{class_koszyk}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_koszyk_exception}{Koszyk\+Exception}} }{\pageref{class_koszyk_exception}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_koszyk_is_empty_exception}{Koszyk\+Is\+Empty\+Exception}} }{\pageref{class_koszyk_is_empty_exception}}{}
-\item\contentsline{section}{\mbox{\hyperlink{class_kurier}{Kurier}} }{\pageref{class_kurier}}{}
+\item\contentsline{section}{\mbox{\hyperlink{class_kurier}{Kurier}} \\*Klasa definiująca Kuriera /summary\texorpdfstring{$>$}{>} }{\pageref{class_kurier}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_magazyn}{Magazyn}} \\*Klasa reprezentująca magazyn }{\pageref{class_magazyn}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_miekka__okladka}{Miekka\+\_\+okladka}} \\*Klasa reprezentująca książkę z miękką okładką }{\pageref{class_miekka__okladka}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_platnosc}{Platnosc}} \\*Klasa reprezentująca płatność }{\pageref{class_platnosc}}{}
@@ -31,7 +31,7 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\mbox{\hyperlink{class_wrong_product_name_exception}{Wrong\+Product\+Name\+Exception}} }{\pageref{class_wrong_product_name_exception}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_wrong_status_exception}{Wrong\+Status\+Exception}} }{\pageref{class_wrong_status_exception}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_wrong_type_exception}{Wrong\+Type\+Exception}} }{\pageref{class_wrong_type_exception}}{}
-\item\contentsline{section}{\mbox{\hyperlink{class_zamowienie}{Zamowienie}} }{\pageref{class_zamowienie}}{}
+\item\contentsline{section}{\mbox{\hyperlink{class_zamowienie}{Zamowienie}} \\*Klasa definiująca zamówienie /summary\texorpdfstring{$>$}{>} }{\pageref{class_zamowienie}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_zamowienie_does_not_exist_exception}{Zamowienie\+Does\+Not\+Exist\+Exception}} }{\pageref{class_zamowienie_does_not_exist_exception}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_zamowienie_exception}{Zamowienie\+Exception}} }{\pageref{class_zamowienie_exception}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_zamowienie_is_oplacone_exception}{Zamowienie\+Is\+Oplacone\+Exception}} }{\pageref{class_zamowienie_is_oplacone_exception}}{}
