--- a/docs/latex/class_klient.tex
+++ b/docs/latex/class_klient.tex
@@ -26,17 +26,17 @@ void \mbox{\hyperlink{class_klient_a5fac7491e05aaf1949f93ac739711ad1}{przegladaj
 \begin{DoxyCompactItemize}
 \item 
 string \mbox{\hyperlink{class_klient_a06359e5d87900307b1517cf964437b71}{Imie}}\hspace{0.3cm}{\ttfamily  \mbox{[}get, set\mbox{]}}
-\begin{DoxyCompactList}\small\item\em Właściwość Imie, umożliwiająca dostęp do imienia klienta. \end{DoxyCompactList}\item 
+\item 
 string \mbox{\hyperlink{class_klient_a943fa4f924768eae1de7d2557cfb7f29}{Nazwisko}}\hspace{0.3cm}{\ttfamily  \mbox{[}get, set\mbox{]}}
-\begin{DoxyCompactList}\small\item\em Właściwość Nazwisko, umożliwiająca dostęp do nazwiska klienta. \end{DoxyCompactList}\item 
+\item 
 string \mbox{\hyperlink{class_klient_a2558ee4991d3aab918898f8648bfa153}{Adres}}\hspace{0.3cm}{\ttfamily  \mbox{[}get, set\mbox{]}}
-\begin{DoxyCompactList}\small\item\em Właściwość Adres, umożliwiająca dostęp do adresu klienta. \end{DoxyCompactList}\item 
+\item 
 int \mbox{\hyperlink{class_klient_a1ac07711b1a3975a85c19f90ca7c0624}{Id}}\hspace{0.3cm}{\ttfamily  \mbox{[}get, set\mbox{]}}
 \begin{DoxyCompactList}\small\item\em Właściwość Id, umożliwiająca dostęp do ID klienta. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{class_koszyk}{Koszyk}} \mbox{\hyperlink{class_klient_a912b7db0f01d8d58c7d77e8d2e93c807}{Koszyk}}\hspace{0.3cm}{\ttfamily  \mbox{[}get, set\mbox{]}}
-\begin{DoxyCompactList}\small\item\em Właściwość \doxylink{class_koszyk}{Koszyk}, umożliwiająca dostęp do koszyka klienta. \end{DoxyCompactList}\item 
+\item 
 List$<$ \mbox{\hyperlink{class_zamowienie}{Zamowienie}} $>$ \mbox{\hyperlink{class_klient_aeaebd16d014373b564bed50a0e88da34}{Zamowienia}}\hspace{0.3cm}{\ttfamily  \mbox{[}get, set\mbox{]}}
-\begin{DoxyCompactList}\small\item\em Właściwość Zamowienia, umożliwiająca dostęp do listy zamówień klienta. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
@@ -225,11 +225,7 @@ Definition at line \mbox{\hyperlink{_klient_8cs_source_l00062}{62}} of file \mbo
 {\footnotesize\ttfamily \label{class_klient_a2558ee4991d3aab918898f8648bfa153} 
 string Klient.\+Adres\hspace{0.3cm}{\ttfamily [get]}, {\ttfamily [set]}}
 
-
-
 Właściwość Adres, umożliwiająca dostęp do adresu klienta. 
-
-
 
 Definition at line \mbox{\hyperlink{_klient_8cs_source_l00039}{39}} of file \mbox{\hyperlink{_klient_8cs_source}{Klient.\+cs}}.
 
@@ -253,11 +249,7 @@ Definition at line \mbox{\hyperlink{_klient_8cs_source_l00044}{44}} of file \mbo
 {\footnotesize\ttfamily \label{class_klient_a06359e5d87900307b1517cf964437b71} 
 string Klient.\+Imie\hspace{0.3cm}{\ttfamily [get]}, {\ttfamily [set]}}
 
-
-
 Właściwość Imie, umożliwiająca dostęp do imienia klienta. 
-
-
 
 Definition at line \mbox{\hyperlink{_klient_8cs_source_l00029}{29}} of file \mbox{\hyperlink{_klient_8cs_source}{Klient.\+cs}}.
 
@@ -267,11 +259,7 @@ Definition at line \mbox{\hyperlink{_klient_8cs_source_l00029}{29}} of file \mbo
 {\footnotesize\ttfamily \label{class_klient_a912b7db0f01d8d58c7d77e8d2e93c807} 
 \mbox{\hyperlink{class_koszyk}{Koszyk}} Klient.\+Koszyk\hspace{0.3cm}{\ttfamily [get]}, {\ttfamily [set]}}
 
-
-
 Właściwość \doxylink{class_koszyk}{Koszyk}, umożliwiająca dostęp do koszyka klienta. 
-
-
 
 Definition at line \mbox{\hyperlink{_klient_8cs_source_l00049}{49}} of file \mbox{\hyperlink{_klient_8cs_source}{Klient.\+cs}}.
 
@@ -281,11 +269,7 @@ Definition at line \mbox{\hyperlink{_klient_8cs_source_l00049}{49}} of file \mbo
 {\footnotesize\ttfamily \label{class_klient_a943fa4f924768eae1de7d2557cfb7f29} 
 string Klient.\+Nazwisko\hspace{0.3cm}{\ttfamily [get]}, {\ttfamily [set]}}
 
-
-
 Właściwość Nazwisko, umożliwiająca dostęp do nazwiska klienta. 
-
-
 
 Definition at line \mbox{\hyperlink{_klient_8cs_source_l00034}{34}} of file \mbox{\hyperlink{_klient_8cs_source}{Klient.\+cs}}.
 
@@ -295,11 +279,7 @@ Definition at line \mbox{\hyperlink{_klient_8cs_source_l00034}{34}} of file \mbo
 {\footnotesize\ttfamily \label{class_klient_aeaebd16d014373b564bed50a0e88da34} 
 List$<$\mbox{\hyperlink{class_zamowienie}{Zamowienie}}$>$ Klient.\+Zamowienia\hspace{0.3cm}{\ttfamily [get]}, {\ttfamily [set]}}
 
-
-
 Właściwość Zamowienia, umożliwiająca dostęp do listy zamówień klienta. 
-
-
 
 Definition at line \mbox{\hyperlink{_klient_8cs_source_l00054}{54}} of file \mbox{\hyperlink{_klient_8cs_source}{Klient.\+cs}}.
 
