--- a/docs/latex/class_koszyk.tex
+++ b/docs/latex/class_koszyk.tex
@@ -14,9 +14,9 @@ Klasa reprezentująca produkt.
 \begin{DoxyCompactItemize}
 \item 
 List$<$ \mbox{\hyperlink{class_produkt}{Produkt}} $>$ \mbox{\hyperlink{class_koszyk_a531ce581bbd4849acbca287302899c93}{Lista\+Produktow}}\hspace{0.3cm}{\ttfamily  \mbox{[}get, set\mbox{]}}
-\begin{DoxyCompactList}\small\item\em Właściwość Lista\+Produktow, umożliwiająca dostęp do listy produktów w koszyku. \end{DoxyCompactList}\item 
+\item 
 double \mbox{\hyperlink{class_koszyk_ac242a0e876fb532d915b6710990995f4}{Wartosc}}\hspace{0.3cm}{\ttfamily  \mbox{[}get, set\mbox{]}}
-\begin{DoxyCompactList}\small\item\em Właściwość Wartosc, umożliwiająca dostęp do wartości koszyka. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
@@ -50,11 +50,7 @@ Definition at line \mbox{\hyperlink{_koszyk_8cs_source_l00011}{11}} of file \mbo
 {\footnotesize\ttfamily \label{class_koszyk_a531ce581bbd4849acbca287302899c93} 
 List$<$\mbox{\hyperlink{class_produkt}{Produkt}}$>$ Koszyk.\+Lista\+Produktow\hspace{0.3cm}{\ttfamily [get]}, {\ttfamily [set]}}
 
-
-
 Właściwość Lista\+Produktow, umożliwiająca dostęp do listy produktów w koszyku. 
-
-
 
 Definition at line \mbox{\hyperlink{_koszyk_8cs_source_l00019}{19}} of file \mbox{\hyperlink{_koszyk_8cs_source}{Koszyk.\+cs}}.
 
@@ -64,11 +60,7 @@ Definition at line \mbox{\hyperlink{_koszyk_8cs_source_l00019}{19}} of file \mbo
 {\footnotesize\ttfamily \label{class_koszyk_ac242a0e876fb532d915b6710990995f4} 
 double Koszyk.\+Wartosc\hspace{0.3cm}{\ttfamily [get]}, {\ttfamily [set]}}
 
-
-
 Właściwość Wartosc, umożliwiająca dostęp do wartości koszyka. 
-
-
 
 Definition at line \mbox{\hyperlink{_koszyk_8cs_source_l00024}{24}} of file \mbox{\hyperlink{_koszyk_8cs_source}{Koszyk.\+cs}}.
 
