--- a/docs/latex/class_kurier.tex
+++ b/docs/latex/class_kurier.tex
@@ -1,5 +1,10 @@
 \doxysection{Kurier Class Reference}
 \hypertarget{class_kurier}{}\label{class_kurier}\index{Kurier@{Kurier}}
+
+
+Klasa definiująca Kuriera /summary\texorpdfstring{$>$}{>}  
+
+
 \doxysubsubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
@@ -19,9 +24,9 @@ List$<$ \mbox{\hyperlink{class_zamowienie}{Zamowienie}} $>$ \mbox{\hyperlink{cla
 
 
 \doxysubsection{Detailed Description}
+Klasa definiująca Kuriera /summary\texorpdfstring{$>$}{>} 
 
-
-Definition at line \mbox{\hyperlink{_kurier_8cs_source_l00001}{1}} of file \mbox{\hyperlink{_kurier_8cs_source}{Kurier.\+cs}}.
+Definition at line \mbox{\hyperlink{_kurier_8cs_source_l00004}{4}} of file \mbox{\hyperlink{_kurier_8cs_source}{Kurier.\+cs}}.
 
 
 
@@ -34,7 +39,7 @@ Kurier.\+Kurier (\begin{DoxyParamCaption}\item[{string}]{nazwa}{}\end{DoxyParamC
 
 summary\texorpdfstring{$>$}{>} Konstruuje nowego kuriera z nazwie "{}\+Steve Jobs"{} /summary\texorpdfstring{$>$}{>} 
 
-Definition at line \mbox{\hyperlink{_kurier_8cs_source_l00023}{23}} of file \mbox{\hyperlink{_kurier_8cs_source}{Kurier.\+cs}}.
+Definition at line \mbox{\hyperlink{_kurier_8cs_source_l00026}{26}} of file \mbox{\hyperlink{_kurier_8cs_source}{Kurier.\+cs}}.
 
 \Hypertarget{class_kurier_a6e015897bcd08194f0a0fe2edcd14f76}\index{Kurier@{Kurier}!Kurier@{Kurier}}
 \index{Kurier@{Kurier}!Kurier@{Kurier}}
@@ -44,7 +49,7 @@ Kurier.\+Kurier (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption})}
 
 summary\texorpdfstring{$>$}{>} Oznacza zamowienie jako dostarczone, oraz usuwa z listy zamowien kuriera. /summary\texorpdfstring{$>$}{>} param="{}zamowienie"{}\texorpdfstring{$>$}{>} \doxylink{class_zamowienie}{Zamowienie}, ktore zostalo dostarczone. /param\texorpdfstring{$>$}{>} 
 
-Definition at line \mbox{\hyperlink{_kurier_8cs_source_l00030}{30}} of file \mbox{\hyperlink{_kurier_8cs_source}{Kurier.\+cs}}.
+Definition at line \mbox{\hyperlink{_kurier_8cs_source_l00033}{33}} of file \mbox{\hyperlink{_kurier_8cs_source}{Kurier.\+cs}}.
 
 
 
@@ -57,7 +62,7 @@ void Kurier.\+dostarcz (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{class_za
 
 
 
-Definition at line \mbox{\hyperlink{_kurier_8cs_source_l00042}{42}} of file \mbox{\hyperlink{_kurier_8cs_source}{Kurier.\+cs}}.
+Definition at line \mbox{\hyperlink{_kurier_8cs_source_l00045}{45}} of file \mbox{\hyperlink{_kurier_8cs_source}{Kurier.\+cs}}.
 
 
 
@@ -70,7 +75,7 @@ string Kurier.\+Nazwa\hspace{0.3cm}{\ttfamily [get]}}
 
 
 
-Definition at line \mbox{\hyperlink{_kurier_8cs_source_l00005}{5}} of file \mbox{\hyperlink{_kurier_8cs_source}{Kurier.\+cs}}.
+Definition at line \mbox{\hyperlink{_kurier_8cs_source_l00008}{8}} of file \mbox{\hyperlink{_kurier_8cs_source}{Kurier.\+cs}}.
 
 \Hypertarget{class_kurier_a27cb57102a53a3b0f58075448729d8e7}\index{Kurier@{Kurier}!Zamowienia@{Zamowienia}}
 \index{Zamowienia@{Zamowienia}!Kurier@{Kurier}}
@@ -84,7 +89,7 @@ List$<$\mbox{\hyperlink{class_zamowienie}{Zamowienie}}$>$ Kurier.\+Zamowienia\hs
 
 summary\texorpdfstring{$>$}{>} Konstruuje nowego kuriera z wlasna nazwa summary\texorpdfstring{$>$}{>} param name="{}nazwa"{}/\texorpdfstring{$>$}{>}
 
-Definition at line \mbox{\hyperlink{_kurier_8cs_source_l00011}{11}} of file \mbox{\hyperlink{_kurier_8cs_source}{Kurier.\+cs}}.
+Definition at line \mbox{\hyperlink{_kurier_8cs_source_l00014}{14}} of file \mbox{\hyperlink{_kurier_8cs_source}{Kurier.\+cs}}.
 
 
 
