--- a/docs/latex/class_magazyn.tex
+++ b/docs/latex/class_magazyn.tex
@@ -20,13 +20,13 @@ void \mbox{\hyperlink{class_magazyn_a01088eb617e53173bdae99419929fa64}{dodaj\+Za
 \begin{DoxyCompactItemize}
 \item 
 int \mbox{\hyperlink{class_magazyn_aba2b5985d6ab0ca9dcf7244c8b3593df}{Id}}\hspace{0.3cm}{\ttfamily  \mbox{[}get\mbox{]}}
-\begin{DoxyCompactList}\small\item\em Właściwość Id, umożliwiająca dostęp do ID magazynu. \end{DoxyCompactList}\item 
+\item 
 List$<$ \mbox{\hyperlink{class_produkt}{Produkt}} $>$ \mbox{\hyperlink{class_magazyn_a7257a77fe161d05e22969f1afcf6bf0a}{Produkty}}\hspace{0.3cm}{\ttfamily  \mbox{[}get, set\mbox{]}}
-\begin{DoxyCompactList}\small\item\em Właściwość Produkty, umożliwiająca dostęp do listy produktów w magazynie. \end{DoxyCompactList}\item 
+\item 
 List$<$ \mbox{\hyperlink{class_zamowienie}{Zamowienie}} $>$ \mbox{\hyperlink{class_magazyn_a6c08381c26f42ff9acaa8143abac3b03}{Zamowienia\+Do\+Realizacji}}\hspace{0.3cm}{\ttfamily  \mbox{[}get\mbox{]}}
-\begin{DoxyCompactList}\small\item\em Właściwość Zamowienia\+Do\+Realizacji, umożliwiająca dostęp do listy zamówień do realizacji. \end{DoxyCompactList}\item 
+\item 
 List$<$ \mbox{\hyperlink{class_zamowienie}{Zamowienie}} $>$ \mbox{\hyperlink{class_magazyn_afcf6256ef6afdfa253e3c4bbdd82bcd3}{Zamowienia\+Zrealizowane}}\hspace{0.3cm}{\ttfamily  \mbox{[}get\mbox{]}}
-\begin{DoxyCompactList}\small\item\em Właściwość Zamowienia\+Zrealizowane, umożliwiająca dostęp do listy zamówień zrealizowanych. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
@@ -147,11 +147,7 @@ Definition at line \mbox{\hyperlink{_magazyn_8cs_source_l00063}{63}} of file \mb
 {\footnotesize\ttfamily \label{class_magazyn_aba2b5985d6ab0ca9dcf7244c8b3593df} 
 int Magazyn.\+Id\hspace{0.3cm}{\ttfamily [get]}}
 
-
-
 Właściwość Id, umożliwiająca dostęp do ID magazynu. 
-
-
 
 Definition at line \mbox{\hyperlink{_magazyn_8cs_source_l00010}{10}} of file \mbox{\hyperlink{_magazyn_8cs_source}{Magazyn.\+cs}}.
 
@@ -161,11 +157,7 @@ Definition at line \mbox{\hyperlink{_magazyn_8cs_source_l00010}{10}} of file \mb
 {\footnotesize\ttfamily \label{class_magazyn_a7257a77fe161d05e22969f1afcf6bf0a} 
 List$<$\mbox{\hyperlink{class_produkt}{Produkt}}$>$ Magazyn.\+Produkty\hspace{0.3cm}{\ttfamily [get]}, {\ttfamily [set]}}
 
-
-
 Właściwość Produkty, umożliwiająca dostęp do listy produktów w magazynie. 
-
-
 
 Definition at line \mbox{\hyperlink{_magazyn_8cs_source_l00018}{18}} of file \mbox{\hyperlink{_magazyn_8cs_source}{Magazyn.\+cs}}.
 
@@ -175,11 +167,7 @@ Definition at line \mbox{\hyperlink{_magazyn_8cs_source_l00018}{18}} of file \mb
 {\footnotesize\ttfamily \label{class_magazyn_a6c08381c26f42ff9acaa8143abac3b03} 
 List$<$\mbox{\hyperlink{class_zamowienie}{Zamowienie}}$>$ Magazyn.\+Zamowienia\+Do\+Realizacji\hspace{0.3cm}{\ttfamily [get]}}
 
-
-
 Właściwość Zamowienia\+Do\+Realizacji, umożliwiająca dostęp do listy zamówień do realizacji. 
-
-
 
 Definition at line \mbox{\hyperlink{_magazyn_8cs_source_l00028}{28}} of file \mbox{\hyperlink{_magazyn_8cs_source}{Magazyn.\+cs}}.
 
@@ -189,11 +177,7 @@ Definition at line \mbox{\hyperlink{_magazyn_8cs_source_l00028}{28}} of file \mb
 {\footnotesize\ttfamily \label{class_magazyn_afcf6256ef6afdfa253e3c4bbdd82bcd3} 
 List$<$\mbox{\hyperlink{class_zamowienie}{Zamowienie}}$>$ Magazyn.\+Zamowienia\+Zrealizowane\hspace{0.3cm}{\ttfamily [get]}}
 
-
-
 Właściwość Zamowienia\+Zrealizowane, umożliwiająca dostęp do listy zamówień zrealizowanych. 
-
-
 
 Definition at line \mbox{\hyperlink{_magazyn_8cs_source_l00038}{38}} of file \mbox{\hyperlink{_magazyn_8cs_source}{Magazyn.\+cs}}.
 
