--- a/docs/latex/class_miekka__okladka.tex
+++ b/docs/latex/class_miekka__okladka.tex
@@ -51,20 +51,20 @@ int \mbox{\hyperlink{class_produkt_a7d136e8189cc0275b8204c31b4679d05}{id}}
 \begin{DoxyCompactItemize}
 \item 
 int \mbox{\hyperlink{class_fizyczne_a55fb370c7bd744a1e4539c0ffd5a7bc6}{Stan}}\hspace{0.3cm}{\ttfamily  \mbox{[}get, set\mbox{]}}
-\begin{DoxyCompactList}\small\item\em Właściwość Stan, umożliwiająca dostęp do stanu produktu fizycznego. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\end{DoxyCompactItemize}
 \doxysubsection*{Properties inherited from \mbox{\hyperlink{class_produkt}{Produkt}}}
 \begin{DoxyCompactItemize}
 \item 
 string \mbox{\hyperlink{class_produkt_ab1554a53cdbaefdf2fb4064bc2d598d5}{Nazwa}}\hspace{0.3cm}{\ttfamily  \mbox{[}get, set\mbox{]}}
-\begin{DoxyCompactList}\small\item\em Właściwość Nazwa, umożliwiająca dostęp do nazwy produktu. \end{DoxyCompactList}\item 
+\item 
 int \mbox{\hyperlink{class_produkt_a992abd883e5878c8fc603c92abb624a3}{Id}}\hspace{0.3cm}{\ttfamily  \mbox{[}get, set\mbox{]}}
-\begin{DoxyCompactList}\small\item\em Właściwość Id, umożliwiająca dostęp do ID produktu. \end{DoxyCompactList}\item 
+\item 
 string \mbox{\hyperlink{class_produkt_a9c2582bd5903dcc2b8903d278ec78814}{Autor}}\hspace{0.3cm}{\ttfamily  \mbox{[}get, set\mbox{]}}
-\begin{DoxyCompactList}\small\item\em Właściwość Autor, umożliwiająca dostęp do autora produktu. \end{DoxyCompactList}\item 
+\item 
 string \mbox{\hyperlink{class_produkt_a78fb42ce1394aac2b1cf7adc051bf32d}{Kategoria}}\hspace{0.3cm}{\ttfamily  \mbox{[}get, set\mbox{]}}
-\begin{DoxyCompactList}\small\item\em Właściwość Kategoria, umożliwiająca dostęp do kategorii produktu. \end{DoxyCompactList}\item 
+\item 
 double \mbox{\hyperlink{class_produkt_a8e231ed0cd704b22f121e7fef81a0311}{Cena}}\hspace{0.3cm}{\ttfamily  \mbox{[}get, set\mbox{]}}
-\begin{DoxyCompactList}\small\item\em Właściwość Cena, umożliwiająca dostęp do ceny produktu. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
