--- a/docs/latex/class_produkt.tex
+++ b/docs/latex/class_produkt.tex
@@ -35,15 +35,15 @@ int \mbox{\hyperlink{class_produkt_a7d136e8189cc0275b8204c31b4679d05}{id}}
 \begin{DoxyCompactItemize}
 \item 
 string \mbox{\hyperlink{class_produkt_ab1554a53cdbaefdf2fb4064bc2d598d5}{Nazwa}}\hspace{0.3cm}{\ttfamily  \mbox{[}get, set\mbox{]}}
-\begin{DoxyCompactList}\small\item\em Właściwość Nazwa, umożliwiająca dostęp do nazwy produktu. \end{DoxyCompactList}\item 
+\item 
 int \mbox{\hyperlink{class_produkt_a992abd883e5878c8fc603c92abb624a3}{Id}}\hspace{0.3cm}{\ttfamily  \mbox{[}get, set\mbox{]}}
-\begin{DoxyCompactList}\small\item\em Właściwość Id, umożliwiająca dostęp do ID produktu. \end{DoxyCompactList}\item 
+\item 
 string \mbox{\hyperlink{class_produkt_a9c2582bd5903dcc2b8903d278ec78814}{Autor}}\hspace{0.3cm}{\ttfamily  \mbox{[}get, set\mbox{]}}
-\begin{DoxyCompactList}\small\item\em Właściwość Autor, umożliwiająca dostęp do autora produktu. \end{DoxyCompactList}\item 
+\item 
 string \mbox{\hyperlink{class_produkt_a78fb42ce1394aac2b1cf7adc051bf32d}{Kategoria}}\hspace{0.3cm}{\ttfamily  \mbox{[}get, set\mbox{]}}
-\begin{DoxyCompactList}\small\item\em Właściwość Kategoria, umożliwiająca dostęp do kategorii produktu. \end{DoxyCompactList}\item 
+\item 
 double \mbox{\hyperlink{class_produkt_a8e231ed0cd704b22f121e7fef81a0311}{Cena}}\hspace{0.3cm}{\ttfamily  \mbox{[}get, set\mbox{]}}
-\begin{DoxyCompactList}\small\item\em Właściwość Cena, umożliwiająca dostęp do ceny produktu. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
@@ -168,11 +168,7 @@ Definition at line \mbox{\hyperlink{_produkt_8cs_source_l00005}{5}} of file \mbo
 {\footnotesize\ttfamily \label{class_produkt_a9c2582bd5903dcc2b8903d278ec78814} 
 string Produkt.\+Autor\hspace{0.3cm}{\ttfamily [get]}, {\ttfamily [set]}}
 
-
-
 Właściwość Autor, umożliwiająca dostęp do autora produktu. 
-
-
 
 Definition at line \mbox{\hyperlink{_produkt_8cs_source_l00036}{36}} of file \mbox{\hyperlink{_produkt_8cs_source}{Produkt.\+cs}}.
 
@@ -182,11 +178,7 @@ Definition at line \mbox{\hyperlink{_produkt_8cs_source_l00036}{36}} of file \mb
 {\footnotesize\ttfamily \label{class_produkt_a8e231ed0cd704b22f121e7fef81a0311} 
 double Produkt.\+Cena\hspace{0.3cm}{\ttfamily [get]}, {\ttfamily [set]}}
 
-
-
 Właściwość Cena, umożliwiająca dostęp do ceny produktu. 
-
-
 
 Definition at line \mbox{\hyperlink{_produkt_8cs_source_l00044}{44}} of file \mbox{\hyperlink{_produkt_8cs_source}{Produkt.\+cs}}.
 
@@ -196,11 +188,7 @@ Definition at line \mbox{\hyperlink{_produkt_8cs_source_l00044}{44}} of file \mb
 {\footnotesize\ttfamily \label{class_produkt_a992abd883e5878c8fc603c92abb624a3} 
 int Produkt.\+Id\hspace{0.3cm}{\ttfamily [get]}, {\ttfamily [set]}}
 
-
-
 Właściwość Id, umożliwiająca dostęp do ID produktu. 
-
-
 
 Definition at line \mbox{\hyperlink{_produkt_8cs_source_l00032}{32}} of file \mbox{\hyperlink{_produkt_8cs_source}{Produkt.\+cs}}.
 
@@ -210,11 +198,7 @@ Definition at line \mbox{\hyperlink{_produkt_8cs_source_l00032}{32}} of file \mb
 {\footnotesize\ttfamily \label{class_produkt_a78fb42ce1394aac2b1cf7adc051bf32d} 
 string Produkt.\+Kategoria\hspace{0.3cm}{\ttfamily [get]}, {\ttfamily [set]}}
 
-
-
 Właściwość Kategoria, umożliwiająca dostęp do kategorii produktu. 
-
-
 
 Definition at line \mbox{\hyperlink{_produkt_8cs_source_l00040}{40}} of file \mbox{\hyperlink{_produkt_8cs_source}{Produkt.\+cs}}.
 
@@ -224,11 +208,7 @@ Definition at line \mbox{\hyperlink{_produkt_8cs_source_l00040}{40}} of file \mb
 {\footnotesize\ttfamily \label{class_produkt_ab1554a53cdbaefdf2fb4064bc2d598d5} 
 string Produkt.\+Nazwa\hspace{0.3cm}{\ttfamily [get]}, {\ttfamily [set]}}
 
-
-
 Właściwość Nazwa, umożliwiająca dostęp do nazwy produktu. 
-
-
 
 Definition at line \mbox{\hyperlink{_produkt_8cs_source_l00028}{28}} of file \mbox{\hyperlink{_produkt_8cs_source}{Produkt.\+cs}}.
 
