--- a/docs/latex/class_zamowienie.tex
+++ b/docs/latex/class_zamowienie.tex
@@ -1,5 +1,10 @@
 \doxysection{Zamowienie Class Reference}
 \hypertarget{class_zamowienie}{}\label{class_zamowienie}\index{Zamowienie@{Zamowienie}}
+
+
+Klasa definiująca zamówienie /summary\texorpdfstring{$>$}{>}  
+
+
 \doxysubsubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
@@ -37,9 +42,9 @@ string \mbox{\hyperlink{class_zamowienie_a88c3e268075fe47fd35c12868525873a}{Link
 
 
 \doxysubsection{Detailed Description}
+Klasa definiująca zamówienie /summary\texorpdfstring{$>$}{>} 
 
-
-Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00005}{5}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
+Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00007}{7}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
 
 
 
@@ -72,7 +77,7 @@ Jeden z Konstruktorów.
 \end{DoxyExceptions}
 
 
-Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00112}{112}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
+Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00114}{114}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
 
 \Hypertarget{class_zamowienie_a060a3bd1b7ccafb4c42f738190c40076}\index{Zamowienie@{Zamowienie}!Zamowienie@{Zamowienie}}
 \index{Zamowienie@{Zamowienie}!Zamowienie@{Zamowienie}}
@@ -103,7 +108,7 @@ Konstruktor używany podczas wczytywania plików.
 \end{DoxyParams}
 
 
-Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00151}{151}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
+Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00153}{153}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
 
 
 
@@ -116,7 +121,7 @@ override bool Zamowienie.\+Equals (\begin{DoxyParamCaption}\item[{object}]{obj}{
 
 
 
-Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00073}{73}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
+Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00075}{75}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
 
 \Hypertarget{class_zamowienie_af1285f72c1cb2be34cbf249a2be7f1e4}\index{Zamowienie@{Zamowienie}!generujLink@{generujLink}}
 \index{generujLink@{generujLink}!Zamowienie@{Zamowienie}}
@@ -133,7 +138,7 @@ Link do cyfrowego produktu.
 \end{DoxyReturn}
 
 
-Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00187}{187}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
+Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00189}{189}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
 
 \Hypertarget{class_zamowienie_a9c0c2cab9f6e8926d21cdce6a6fb9bb4}\index{Zamowienie@{Zamowienie}!zmienStatus@{zmienStatus}}
 \index{zmienStatus@{zmienStatus}!Zamowienie@{Zamowienie}}
@@ -157,7 +162,7 @@ Zmienia status zamówienia.
 \end{DoxyExceptions}
 
 
-Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00171}{171}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
+Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00173}{173}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
 
 
 
@@ -174,7 +179,7 @@ string Zamowienie.\+Adres\hspace{0.3cm}{\ttfamily [get]}}
 
 
 
-Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00034}{34}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
+Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00036}{36}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
 
 \Hypertarget{class_zamowienie_ad8a204b237b7dce5ab8714d7ce02cdc9}\index{Zamowienie@{Zamowienie}!DzienZamowienia@{DzienZamowienia}}
 \index{DzienZamowienia@{DzienZamowienia}!Zamowienie@{Zamowienie}}
@@ -188,7 +193,7 @@ Dzień, w którym było składane zamówienie.
 
 
 
-Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00042}{42}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
+Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00044}{44}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
 
 \Hypertarget{class_zamowienie_a58b2083c2f7c62a35df12b5166191ad1}\index{Zamowienie@{Zamowienie}!IdKlienta@{IdKlienta}}
 \index{IdKlienta@{IdKlienta}!Zamowienie@{Zamowienie}}
@@ -202,7 +207,7 @@ int Zamowienie.\+Id\+Klienta\hspace{0.3cm}{\ttfamily [get]}}
 
 
 
-Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00017}{17}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
+Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00019}{19}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
 
 \Hypertarget{class_zamowienie_a88c3e268075fe47fd35c12868525873a}\index{Zamowienie@{Zamowienie}!Link@{Link}}
 \index{Link@{Link}!Zamowienie@{Zamowienie}}
@@ -216,7 +221,7 @@ string Zamowienie.\+Link\hspace{0.3cm}{\ttfamily [get]}, {\ttfamily [set]}}
 
 
 
-Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00086}{86}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
+Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00088}{88}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
 
 \Hypertarget{class_zamowienie_ab924467a5a76de8a463e2f981a158b9e}\index{Zamowienie@{Zamowienie}!ListaProduktow@{ListaProduktow}}
 \index{ListaProduktow@{ListaProduktow}!Zamowienie@{Zamowienie}}
@@ -230,7 +235,7 @@ List$<$\mbox{\hyperlink{class_produkt}{Produkt}}$>$ Zamowienie.\+Lista\+Produkto
 
 
 
-Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00057}{57}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
+Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00059}{59}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
 
 \Hypertarget{class_zamowienie_af43e41a5e2a4c4db9b3599d148a0eaae}\index{Zamowienie@{Zamowienie}!Numer@{Numer}}
 \index{Numer@{Numer}!Zamowienie@{Zamowienie}}
@@ -244,7 +249,7 @@ int Zamowienie.\+Numer\hspace{0.3cm}{\ttfamily [get]}}
 
 
 
-Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00010}{10}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
+Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00012}{12}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
 
 \Hypertarget{class_zamowienie_a6084c7ab010ff7db53ba7092980fd087}\index{Zamowienie@{Zamowienie}!OstatniaAktualizacja@{OstatniaAktualizacja}}
 \index{OstatniaAktualizacja@{OstatniaAktualizacja}!Zamowienie@{Zamowienie}}
@@ -258,7 +263,7 @@ Dzień, w którym zamówienie było ostanio aktualizowane.
 
 
 
-Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00049}{49}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
+Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00051}{51}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
 
 \Hypertarget{class_zamowienie_a6ac3c4219c35e20e676725c169465fba}\index{Zamowienie@{Zamowienie}!Status@{Status}}
 \index{Status@{Status}!Zamowienie@{Zamowienie}}
@@ -272,7 +277,7 @@ string Zamowienie.\+Status\hspace{0.3cm}{\ttfamily [get]}, {\ttfamily [set]}}
 
 
 
-Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00024}{24}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
+Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00026}{26}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
 
 \Hypertarget{class_zamowienie_a93562b1c3ff6132c049388dfca6e0f4a}\index{Zamowienie@{Zamowienie}!Wartosc@{Wartosc}}
 \index{Wartosc@{Wartosc}!Zamowienie@{Zamowienie}}
@@ -286,7 +291,7 @@ double Zamowienie.\+Wartosc\hspace{0.3cm}{\ttfamily [get]}}
 
 summary\texorpdfstring{$>$}{>} Override porównania 2 zamowień, porównoje numer zamowień. /summary\texorpdfstring{$>$}{>} 
 
-Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00064}{64}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
+Definition at line \mbox{\hyperlink{_zamowienie_8cs_source_l00066}{66}} of file \mbox{\hyperlink{_zamowienie_8cs_source}{Zamowienie.\+cs}}.
 
 
 
